Este es el parrafo de mi blog

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
    <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero quaerat numquam nobis voluptatem labore quidem, placeat excepturi saepe eaque ipsam porro ipsum rerum, aut cupiditate tempora omnis neque sit a.
    </p>
 
+   <p>
+       Hola, este es mi blog, y este es un mensaje muy genial.
+   </p>
+
 
 </body>
 </html>
