--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Blog Post</title>
 </head>
 <body>
+    <div>
     <h1>Bienvenido a Mi Blog</h1>
    <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero quaerat numquam nobis voluptatem labore quidem, placeat excepturi saepe eaque ipsam porro ipsum rerum, aut cupiditate tempora omnis neque sit a.
    </p>
@@ -14,7 +15,7 @@
    <p>
        Hola, este es mi blog, y este es un mensaje muy genial.
    </p>
-
+    </div>
 
 </body>
 </html>
