Estructura inicial de la cabecera

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Blog Post</title>
 </head>
 <body>
-    <div>
+    <div class="normal">
     <h1>Bienvenido a Mi Blog</h1>
    <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero quaerat numquam nobis voluptatem labore quidem, placeat excepturi saepe eaque ipsam porro ipsum rerum, aut cupiditate tempora omnis neque sit a.
    </p>
