Cambio de tipografia y parrafo nuevo

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
    <p>
        Hola, este es mi blog, y este es un mensaje muy genial.
    </p>
+
+   <p>Parrafo adicionarl Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis, voluptas veritatis. Quis tempora non quibusdam aspernatur delectus nihil voluptate ipsam placeat obcaecati quasi minima, hic sapiente. Asperiores ad odit in.</p>
     </div>
 
 </body>
