--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="normal">
-    <h1>Bienvenido a Mi Blog</h1>
+    <h1>Bienvenido a Mi Blog 2.0</h1>
    <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero quaerat numquam nobis voluptatem labore quidem, placeat excepturi saepe eaque ipsam porro ipsum rerum, aut cupiditate tempora omnis neque sit a.
    </p>
 
